--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="Rohan Kokkula | Portfolio"
+      name="Waleed Gul | Portfolio"
       content="Portfolio content"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
     <link rel="manifest" href="favicons/site.webmanifest">
-    <meta property="og:title" content="Rohan Kokkula Portfolio" />
+    <meta property="og:title" content="Waleed Gul Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://rohankokkula.ml/" />
     <link rel="manifest" href="favicons/manifest.json">
@@ -23,7 +23,7 @@
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.js"></script>
     <script src="./canvasjs.min.js"></script>
-    <title>Rohan Kokkula | Portfolio</title>
+    <title>Waleed Gul | Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
